// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Component renders correctly 1`] = `
<div>
  <footer
    class="bg-navy-DEFAULT dark:bg-navy-DEFAULT py-8 text-white"
    id="end"
  >
    <div
      class="container mx-auto px-6"
    >
      <div
        class="flex flex-col items-center"
      >
        <div
          class="social-links-modern mb-6"
        >
          <a
            aria-label="GitHub"
            class="social-icon-modern"
            data-testid="motion-link"
            href="https://github.com/test-user"
            rel="noopener noreferrer"
            target="_blank"
            whilehover="[object Object]"
            whiletap="[object Object]"
          >
            <svg
              class="h-5 w-5"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            aria-label="LinkedIn"
            class="social-icon-modern"
            data-testid="motion-link"
            href="https://linkedin.com/in/test-user"
            rel="noopener noreferrer"
            target="_blank"
            whilehover="[object Object]"
            whiletap="[object Object]"
          >
            <svg
              class="h-5 w-5"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
                fill="currentColor"
              />
            </svg>
          </a>
          <a
            aria-label="Email"
            class="social-icon-modern"
            data-testid="motion-link"
            href="mailto:test@example.com"
            whilehover="[object Object]"
            whiletap="[object Object]"
          >
            <svg
              class="h-5 w-5"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
                fill="currentColor"
              />
            </svg>
          </a>
        </div>
      </div>
      <div
        class="mt-2 flex flex-col items-center border-t border-white/10 pt-4"
      >
        <p
          class="text-sm text-white/60"
        >
          © 
          2025
           
          Test User
          . All rights reserved.
        </p>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Footer Component should render correctly and match snapshot 1`] = `
<div>
  <footer
    class="bg-bg-surface py-8"
    id="end"
  >
    <div
      class="container mx-auto w-full px-6"
    >
      <div
        class="flex flex-col items-center"
      >
        <div
          class="mb-6 flex items-center space-x-6"
        >
          <a
            aria-label="GitHub"
            class="text-text-secondary transition-colors duration-300 hover:text-accent"
            data-testid="motion-link"
            href="https://github.com/test-user"
            rel="noopener noreferrer"
            target="_blank"
            whilehover="[object Object]"
            whiletap="[object Object]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-github h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"
              />
              <path
                d="M9 18c-4.51 2-5-2-7-2"
              />
            </svg>
          </a>
          <a
            aria-label="LinkedIn"
            class="text-text-secondary transition-colors duration-300 hover:text-accent"
            data-testid="motion-link"
            href="https://linkedin.com/in/test-user"
            rel="noopener noreferrer"
            target="_blank"
            whilehover="[object Object]"
            whiletap="[object Object]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-linkedin h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
              />
              <rect
                height="12"
                width="4"
                x="2"
                y="9"
              />
              <circle
                cx="4"
                cy="4"
                r="2"
              />
            </svg>
          </a>
          <a
            aria-label="Email"
            class="text-text-secondary transition-colors duration-300 hover:text-accent"
            data-testid="motion-link"
            href="mailto:test@example.com"
            whilehover="[object Object]"
            whiletap="[object Object]"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-mail h-6 w-6"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
              />
              <rect
                height="16"
                rx="2"
                width="20"
                x="2"
                y="4"
              />
            </svg>
          </a>
        </div>
        <div
          class="w-full mt-4 pt-4 border-t border-text-primary/10"
        >
          <p
            class="text-center text-sm text-text-secondary"
          >
            © 
            2025
             
            Test User
            . All rights reserved.
          </p>
        </div>
      </div>
    </div>
  </footer>
</div>
`;
